@@ -1,6 +1,7 @@
 version 0.60.2
-03/04/2018
+09/04/2018
 	- implemented OAuth2 client registration (margaretha)
+	- changed virtual corpus search to retrieval (margaretha)
 	
 version 0.60.1
 28/03/2018
